--- a/languages/asu_s.pot
+++ b/languages/asu_s.pot
@@ -80,7 +80,7 @@ msgstr ""
 #. translators: %s: Name of current post
 
 #: content.php:22
-msgid "Continue reading %s <span class=\"meta-nav\">&rarr;</span>"
+msgid "Continue reading %s "
 msgstr ""
 
 #: footer.php:15
